Project

General

Profile

Actions

Bug #51762

closed

Missed shared block repair doesn't fix related issues

Added by Igor Fedotov almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Missed shared block is usually coupled with improper statfs and extent leakage errors.
One should adjust relevant data structures during the repair to avoid reporting additional errors.

Second repair run might be used as a workaround as it fixes these issues.


Related issues 2 (0 open2 closed)

Copied to bluestore - Backport #51763: pacific: Missed shared block repair doesn't fix related issuesResolvedActions
Copied to bluestore - Backport #51764: octopus: Missed shared block repair doesn't fix related issuesResolvedActions
Actions #1

Updated by Igor Fedotov almost 3 years ago

  • Backport set to pacific, octopus
Actions #2

Updated by Igor Fedotov almost 3 years ago

  • Status changed from In Progress to Pending Backport
  • Pull request ID set to 42439
Actions #3

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51763: pacific: Missed shared block repair doesn't fix related issues added
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51764: octopus: Missed shared block repair doesn't fix related issues added
Actions #5

Updated by Igor Fedotov almost 3 years ago

  • Status changed from Pending Backport to Fix Under Review
Actions #6

Updated by Igor Fedotov over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by Igor Fedotov over 2 years ago

  • Status changed from Pending Backport to Resolved
Actions #8

Updated by Igor Fedotov over 2 years ago

  • Status changed from Resolved to Pending Backport
Actions #9

Updated by Igor Fedotov over 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF